# AgentLens

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHECKS.md  CLAUDE.md  Dockerfile  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE_1.md  IMPLEMENTATION_PLAN_PHASE_2.md  IMPLEMENTATION_PLAN_PHASE_3.md  IMPLEMENTATION_PLAN_PHASE_4.md  IMPLEMENTATION_PLAN_PHASE_5.md  IMPLEMENTATION_PLAN_PHASE_A.md  IMPLEMENTATION_PLAN_PHASE_B.md  IMPLEMENTATION_PLAN_PHASE_C.md  IMPLEMENTATION_PLAN_PHASE_P1.md  IMPLEMENTATION_PLAN_PHASE_P2_1.md  IMPLEMENTATION_PLAN_PHASE_P2_2.md  IMPLEMENTATION_PLAN_PHASE_P2_3.md  IMPLEMENTATION_PLAN_PHASE_P2_4.md  IMPLEMENTATION_STATUS.md  README.md  REVIEW.md  REVIEW_VALIDATION.md  TODOS.md  decisions.md  pyproject.toml
.claude/: settings.local.json
benchmarks/: default.json
demo/: agent.py  scenarios.py
demo/fixtures/: happy_path.json  loop_scenario.json  risk_scenario.json
examples/crewai_research/: README.md  requirements.txt  run.py
examples/mailbox_brain/: README.md  brain.py
examples/pharma_pipeline/: README.md  bad_run_report.html  pharma_report.html  report.html  report_bad.html  run.py
src/agentlens/: __init__.py  benchmark.py  cli.py  engine.py
src/agentlens/capture/: __init__.py  tracer.py
src/agentlens/evaluators/: __init__.py  behavior.py  business.py  operational.py  rag.py  risk.py
src/agentlens/export/: __init__.py  otel.py
src/agentlens/models/: __init__.py  evaluation.py  expectation.py  trace.py
src/agentlens/report/: __init__.py  html.py  terminal.py
src/agentlens/report/templates/: report.html.j2
src/agentlens/server/: __init__.py  canned.py  collector.py  guards.py  mailbox.py  models.py  proxy.py  wrapping.py
tests/: conftest.py  test_benchmark.py  test_canned.py  test_cli.py  test_collector.py  test_e2e.py  test_engine.py  test_guards.py  test_mailbox.py  test_models.py  test_otel_export.py  test_report.py  test_server.py  test_server_models.py  test_tracer.py  test_wrapping.py
tests/test_evaluators/: conftest.py  test_behavior.py  test_business.py  test_operational.py  test_rag.py  test_risk.py
