[project]
name = "agentlens"
version = "0.1.0"
description = "Trajectory-first agent evaluation framework"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0,<3",
    "rich>=13.0.0,<14",
    "typer[all]>=0.9.0,<1",
    "jinja2>=3.1.0,<4",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "httpx>=0.27.0,<1",
]

[project.optional-dependencies]
live = ["openai>=1.0.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8.0", "pyright>=1.1.390", "ty>=0.0.1a1", "pre-commit>=4.0"]

[project.scripts]
agentlens = "agentlens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
markers = ["e2e: end-to-end tests requiring subprocess"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
exclude = ["examples"]

[tool.ty.src]
exclude = ["examples"]
